addition of slide templates using deck.js

--- a/01-one.html
+++ b/01-one.html
@@ -26,15 +26,15 @@
       <article>
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
-          <h1 class="title">Lesson Title</h1>
+                    <a href="index.html"><h1 class="title">Lesson Title</h1></a>
           <h2 class="subtitle">Topic Title One</h2>
-<section class="objectives panel panel-warning">
+          <section class="objectives panel panel-warning">
 <div class="panel-heading">
 <h2 id="learning-objectives"><span class="glyphicon glyphicon-certificate"></span>Learning Objectives</h2>
 </div>
 <div class="panel-body">
 <ul>
-<li>Learning objective 1</li>
+<li>Learning objective 1 basic c programming</li>
 <li>Learning objective 2</li>
 </ul>
 </div>
