Minor update Linux Cheatsheet

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <h2 id="prerequisites"><span class="glyphicon glyphicon-education"></span>Prerequisites</h2>
 </div>
 <div class="panel-body">
-<p>This course assumes that the students have a basic knowledge of Linux as covered by our <a href="http://www.shef.ac.uk/cics/research/training/linux">Introduction to Linux course ( CIC6001a )</a>. <a href="http://rcg.group.shef.ac.uk/courses/linux/shell-cheatsheet.html">Linux Cheatsheet</a></p>
+<p>This course assumes that the students have a basic knowledge of Linux as covered by our <a href="http://www.shef.ac.uk/cics/research/training/linux">Introduction to Linux course ( CIC6001a )</a>. See also the <a href="http://rcg.group.shef.ac.uk/courses/linux/shell-cheatsheet.html">Linux Cheatsheet</a>.</p>
 </div>
 </section>
 <section class="getready panel panel-warning">
