--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <li><a href="http://www.shef.ac.uk/cics/research/hpc/using/interactive">Running Applications on the HPC Cluster</a></li>
 <li><a href="http://www.shef.ac.uk/cics/research/hpc/using/runbatch">Using the Job Scheduler</a></li>
 <li><a href="http://rcg.group.shef.ac.uk/iceberg/gpu/">GPUs and Remote Visualisation</a></li>
-<li><a href="http://www.shef.ac.uk/wrgrid/n8">Beyond Iceberg</a></li>
+<li><a href="http://www.shef.ac.uk/cics/research/hpc/iceberg/costs">Beyond Iceberg</a></li>
 </ol>
 <h2 id="other-resources">Other Resources</h2>
 <ul>
@@ -123,6 +123,12 @@
 <li><a href="courseexercises.html">Course Examples</a></li>
 <li><a href="http://rcg.group.shef.ac.uk/courses/hpcintro/downloads/hpc_sheffield_intro_2015.ppt">Slides</a></li>
 <li><a href="http://rcg.group.shef.ac.uk/iceberg/icebergDocumentation.pdf">Getting Started Notes on HPC at Sheffield</a></li>
+</ul>
+<h2 id="software-downloads">Software Downloads</h2>
+<ul>
+<li><a href="http://www.chiark.greenend.org.uk/~sgtatham/putty/">Putty ssh client (Windows)</a></li>
+<li><a href="http://winscp.net/eng/download.php">Win SCP file transfer Client (Windows)</a></li>
+<li><a href="http://sourceforge.net/projects/tigervnc/">Tiger VNC Client for Remote Visualisation</a></li>
 </ul>
         </div>
       </div>
