Corrections for May2016 course - update links and ehterpad

--- a/courseexercises.html
+++ b/courseexercises.html
@@ -144,7 +144,7 @@
 <p>Run the SGE task array example Run test4, test5</p>
 <h2 id="resource-links">Resource Links</h2>
 <ul>
-<li><a href="https://etherpad.mozilla.org/CzIWonFrAs">Shared Notepad</a></li>
+<li><a href="https://public.etherpad-mozilla.org/p/hpcintro_sheffield">Shared Notepad</a></li>
 <li><a href="http://rcg.group.shef.ac.uk/courses/hpcintro/downloads/hpc_intro.tgz">Course Examples</a></li>
 </ul>
         </div>
