--- a/index.html
+++ b/index.html
@@ -111,18 +111,18 @@
 <li><a href="http://www.sheffield.ac.uk/cics/research/hpc/iceberg/register">Accessing HPC at TUOS</a></li>
 <li><a href="http://www.shef.ac.uk/cics/research">Get Help and Information</a></li>
 <li><a href="http://www.shef.ac.uk/cics/research/hpc/data">Using Storage and Managing Data</a></li>
-<li><a href="http://rcg.group.shef.ac.uk/icesoftonly">Software on the HPC Cluster</a></li>
+<li><a href="http://docs.iceberg.shef.ac.uk/">Software on the HPC Cluster</a></li>
 <li><a href="http://www.shef.ac.uk/cics/research/hpc/using/interactive">Running Applications on the HPC Cluster</a></li>
 <li><a href="http://www.shef.ac.uk/cics/research/hpc/using/runbatch">Using the Job Scheduler</a></li>
-<li><a href="http://rcg.group.shef.ac.uk/icesoftonly/gpu/index.html#gpuintro">GPUs and Remote Visualisation</a></li>
+<li><a href="http://docs.iceberg.shef.ac.uk/en/latest/gpu">GPUs and Remote Visualisation</a></li>
 <li><a href="http://www.shef.ac.uk/cics/research/hpc/iceberg/costs">Beyond Iceberg</a></li>
 </ol>
 <h2 id="other-resources">Other Resources</h2>
 <ul>
-<li><a href="https://etherpad.mozilla.org/CzIWonFrAs">Shared Notepad</a></li>
+<li><a href="https://public.etherpad-mozilla.org/p/hpcintro_sheffield">Shared Notepad</a></li>
 <li><a href="courseexercises.html">Course Examples</a></li>
 <li><a href="http://rcg.group.shef.ac.uk/courses/hpcintro/downloads/hpc_sheffield_intro_2016.ppt">Slides</a></li>
-<li><a href="http://rcg.group.shef.ac.uk/iceberg/icebergDocumentation.pdf">Getting Started Notes on HPC at Sheffield</a></li>
+<li><a href="http://rcg.group.shef.ac.uk/courses/hpcintro/donwnloads/iceberg.pdf">Getting Started Notes on HPC at Sheffield</a></li>
 </ul>
 <h2 id="software-downloads">Software Downloads</h2>
 <ul>
